ncc/testsuite/negative/bug-1047.n
module Bug1047 {
  class A {
    public x : int;
  }
  Run1 (_ : A) : int {
    | d where d = 0 => 1 // E: unbound type name d
  }
  Run2 (_ : A) : int {
    | a where x = "" => 2  // E: unbound type name a
  }
}

